syntax = "proto3";

package RBAC;


service RBACService {
  rpc Login (LoginRequest) returns (LoginResponse);
}

message LoginRequest {
	string userName = 1;
	string password = 2;
}

message LoginResponse {
  bool isSuccess = 1;
  string errorMessage = 2;
  string Token = 3;
}